Non-mobile homepage design finished

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="home.js"></script>
 </head>
 <body>
 	<div id='home_container'>
-		<h1>Bryce Yoder</h1>
+        <h1 id='name'></h1>
+		<h1 style='color:black;'>BRYCE YODER</h1>
+        <h5 id='subhead'>Graphic Design and Programming<hr /></h1>
+        <br />
 		<div id='home_menu'>
 			<span class='home-menu-item'>About</span>	
 			<span>|</span>
