--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <h5 id='subhead'>Graphic Design and Programming<hr /></h1>
         <br />
 		<div id='home_menu'>
-			<span class='home-menu-item'>About</span>	
-			<span>|</span>
-			<span class='home-menu-item'>Projects</span>	
-			<span>|</span>
-			<span class='home-menu-item'>Contact</span>	
+            <span class='home-menu-item'><a href='about.html'>About</a></span>	
+            <span class='home-div-1'>|</span>
+            <hr class='home-div-2' />
+            <span class='home-menu-item'><a href='about.html'>Projects</a></span>	
+            <span class='home-div-1'>|</span>
+            <hr class='home-div-2' />
+            <span class='home-menu-item'><a href='about.html'>Contact</a></span>	
 		</div>
 	</div>
 </body>
