--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <span class='home-menu-item'><a href='about.html'>Projects</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
-            <span class='home-menu-item'><a href='about.html'>Contact</a></span>	
+            <span class='home-menu-item'><a href='contact.html'>Contact</a></span>	
 		</div>
 	</div>
 </body>
