Contact page, animations

--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
         <h1 class='body_heading' style='width:500px;'>Drop Me a Line</h1>
         <p class='body_p'>Interested in hiring me freelance, collaborating on a project, or recruiting for a position? Maybe you're just very lonely and need somebody to talk to. That's okay too! Here are some ways you can do that:</p>
         <div id='contact-bar'>
-            <img class='contact_button' src='linkedin.png' />
-            <img class='contact_button' src='facebook.png' />
-            <img class='contact_button' src='youtube.png' />
-            <img class='contact_button' src='github.png' />
+            <a href='https://www.linkedin.com/in/bryce-yoder-283503126/'><img class='contact_button' src='linkedin.png' /></a>
+            <a href='https://www.facebook.com/bryce.yoder.75'><img class='contact_button' src='facebook.png' /></a>
+            <a href='https://www.youtube.com/user/StoneRainStudios'><img class='contact_button' src='youtube.png' /></a>
+            <a href='https://www.github.com/limekiller'><img class='contact_button' src='github.png' /></a>
         </div>
         <div style="text-align:center;"><p style='margin:0;margin-top:50px;'>Or email me at:</p><h1 style='margin:0;padding-bottom:50px;'>me@bryceyoder.com</h1></div>
     </div>
