Animations, Project page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1 class='page_heading'>ABOUT</h1>
-    <span class='page_subhead'><a href='https://www.github.com/limekiller'>GitHub</a> | <a href='https://www.youtube.com/channel/UCjfpZEuhd5bzGf-TFdnCwpg'>YouTube</a></span>
+    <span class='page_subhead'><a class='exlink' href='https://www.github.com/limekiller'>GitHub</a> | <a class='exlink' href='https://www.youtube.com/channel/UCjfpZEuhd5bzGf-TFdnCwpg'>YouTube</a></span>
     <div class='body_container'>
         <h1 class='body_heading' style='width:500px;'>Programming and Graphic Design</h1>
         <p class='body_p'>I'm a full-stack developer currently pursuing a bachelor's in Computer Science and a minor in Graphic Design at Goshen College. I'm also a Systems Administrator at Mennonite.net, a small web-hosting company in Goshen, IN focusing on churches and small organizations. Here are a few of the things I'm most proficient at:</p>
@@ -40,5 +40,5 @@
                 </ul>
             </div>
     </div>
-            <h2 style='text-align:center;font-size:30px;padding-bottom:20px;'><a href='contact.html'>Check out my contact page to get in touch</a></h2>
+            <h2 style='text-align:center;font-size:30px;padding-bottom:20px;'><a class='exlink' href='contact.html'>Check out my contact page to get in touch</a></h2>
 </body>
