--- a/projects.html
+++ b/projects.html
@@ -8,37 +8,16 @@
 
 <body>
     <h1 class='page_heading'>PROJECTS</h1>
-    <span class='page_subhead'>Animations | Websites | Other </span>
-    <div class='body_container'>
-        <h1 class='body_heading' style='width:500px;'>Programming and Graphic Design</h1>
-        <p class='body_p'>I'm a full-stack developer currently pursuing a bachelor's in Computer Science and a minor in Graphic Design at Goshen College. I'm also a Systems Administrator at Mennonite.net, a small web-hosting company in Goshen, IN focusing on churches and small organizations. Here are a few of the things I'm most proficient at:</p>
-        <div id='split-list'>
-            <div class='split_list_part'>
-                <h1 style='font-size:50px;'>Languages</h1>
-                <ul>
-                    <li>Python</li>
-                    <li>PHP</li>
-                    <li>JavaScript</li>
-                    <li>C#</li>
-                    <li>Bash</li>
-                    <li>LISP</li>
-                    <li>Java</li>
-                </ul>
-            </div>
-            <div class='split_list_part' style='width:1px;align-self:center;height:300px;background-color:black'></div>
-            <div class='split_list_part'>
-                <h1 style='font-size:50px;'>Technologies</h1>
-                <ul>
-                    <li>Photoshop</li>
-                    <li>Illustrator</li>
-                    <li>InDesign</li>
-                    <li>Animate</li>
-                    <li>HTML/CSS</li>
-                    <li>Apache/NGINX</li>
-                    <li>Unity</li>
-                    <li>Blender</li>
-                </ul>
-            </div>
+
+    <div class='page_subhead'>
+        <span class='proj_select'>Animations</span> 
+        | <span class='proj_select'>Websites</span> 
+        | <span class='proj_select selected'>Other</span>
     </div>
-            <h2 style='text-align:center;font-size:30px;padding-bottom:20px;'><a href='contact.html'>Check out my contact page to get in touch</a></h2>
+
+    <div style='margin:0 100;' class='body_container'>
+        <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
+        <p class='body_p'>asdfasdf adsf adsklfj;adsk fj;asdfadjks kfjads ;jkfadslfkjads;fj adklsfj;asdfklj as;ldfj ;adskfj ;adskjf;adskjf;adksjf;kalsj  asjdf ;kadsf ;as ads; kads; fj;adsf;asdhiuovphtrnp pfuadgps uabvpaehwrbuaep bubperspb pubf uads</p>
+    </div>
+    
 </body>
