--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class='home-menu-item'><a href='about.html'>About</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
-            <span class='home-menu-item'><a href='about.html'>Projects</a></span>	
+            <span class='home-menu-item'><a href='projects.html'>Projects</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
             <span class='home-menu-item'><a href='contact.html'>Contact</a></span>	
