--- a/projects.html
+++ b/projects.html
@@ -4,20 +4,111 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <script>
+        function selectList(e, name) {
+            var x = document.getElementsByClassName("selected");
+            for (var i =0; i < x.length; i++){
+                x[i].classList.remove("selected");
+            }
+            var y = document.getElementsByName(name);
+            for (var i=0; i < y.length; i++){
+                y[i].classList.add("selected");
+            }
+        }
+    </script>
 </head>
 
 <body>
     <h1 class='page_heading'>PROJECTS</h1>
 
     <div class='page_subhead'>
-        <span class='proj_select'>Animations</span> 
-        | <span class='proj_select'>Websites</span> 
-        | <span class='proj_select selected'>Other</span>
+        <span name="Animations" class='proj_select' onclick="selectList(this, this.innerHTML)" >Animations</span> 
+        | <span name="Websites" class='proj_select' onclick="selectList(this, this.innerHTML)" >Websites</span> 
+        | <span name="Other" class='proj_select selected' onclick="selectList(this, this.innerHTML)" >Other</span>
     </div>
 
-    <div style='margin:0 100;' class='body_container'>
+    <div name='Animations' style='margin:0 100;width:45%;' class='body_container proj'>
         <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
         <p class='body_p'>asdfasdf adsf adsklfj;adsk fj;asdfadjks kfjads ;jkfadslfkjads;fj adklsfj;asdfklj as;ldfj ;adskfj ;adskjf;adskjf;adksjf;kalsj  asjdf ;kadsf ;as ads; kads; fj;adsf;asdhiuovphtrnp pfuadgps uabvpaehwrbuaep bubperspb pubf uads</p>
+        <div class='photo_container'>
+            ahh
+        </div>
     </div>
+    <div name='Websites' style='margin:0 100;width:45%;' class='body_container proj'>
+        <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
+        <p class='body_p'>asdfasdf adsf adsklfj;adsk fj;asdfadjks kfjads ;jkfadslfkjads;fj adklsfj;asdfklj as;ldfj ;adskfj ;adskjf;adskjf;adksjf;kalsj  asjdf ;kadsf ;as ads; kads; fj;adsf;asdhiuovphtrnp pfuadgps uabvpaehwrbuaep bubperspb pubf uads</p>
+        <div class='photo_container'>
+        </div>
+    </div>
+    <div name='Other' style='margin:0 100;width:45%;' class='body_container proj selected'>
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Homeboard</h1>
+            <p class='body_p'>An open-source Google-integrated dashboard for your home. I wanted a way to see all of my apartment-mates' schedules at once, and figured it was the perfect way to learn Flask. Homeboard is a webapp that allows you to login with your Google account, and displays your Calendar, Google Drive documents, breaking news headlines, local weather, and the time.</p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Movable and resizable widgets</li>
+                <li>Save boards between sign-ins</li>
+                <li>Customizable colors and styles</li>
+                <li>Google account integration</li>
+                <li>An array of widgets available</li>
+                <li>Easily develop widgets against a simple template</li>
+            </ul>
+            <hr />
+            <div class='photo_container'>
+                <img src='./images/hb1.png' />
+                <img src='./images/hb2.png' />
+                <img src='./images/hb3.png' />
+            </div>
+        </div>
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>BENK Media Server</h1>
+            <p class='body_p'>A simple media server that stores, streams, and downloads media with ease. Although many media server solutions exist, I wanted something that would let me not only store media, but easily download and stream it as well, a la Exodus for Kodi (but better).</p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Upload and store files</li>
+                <li>Create, rename, and delete files and folders</li>
+                <li>Easily and conveniently download files from multiples sources</li>
+                <li>Manage and view in-progress downloads</li>
+                <li>Stream videos from external sources</li>
+                <li>View movie info with the help of the IMDB API</li>
+            </ul>
+            <hr />
+            <div class='photo_container'>
+                <img src='./images/bms1.png' />
+                <img src='./images/bms2.png' />
+                <img src='./images/bms3.png' />
+                <img src='./images/bms4.png' />
+                <img src='./images/bms5.png' />
+            </div>
+        </div>
+        <div class='project'>
+            <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
+            <p class='body_p'>A pretty nifty LAN-enabled multiplayer Cards game, right in the terminal. Requires no dependencies, being implemented purely through the Python socket library.</p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Search for games on local network</li>
+                <li>Integrated instant chat for players</li>
+                <li>Supports a theoretically infinite number of players per game</li>
+                <li>Add and edit your own cards easily</li>
+                <li>Lots of bugs</li>
+            </ul>
+            <hr />
+            <div class='photo_container'>
+            </div>
+        </div>
+        <div class='project'>
+            <h1 class='body_heading' style='width:500px;'>Cookie Monster</h1>
+            <p class='body_p'>An incredibly bare-bones implementation of QTBrowser with PyQT, that periodically and quietly clears cookies automatically for uninterrupted New York Times and Washington Post reading (or any site that restricts access through cookies).</p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Front-end splash screen to easily access sites</li>
+                <li>Browse without cookies!</li>
+                <li>Internet Explorer implementation for sites that don't work with QTBrowser</li>
+            </ul>
+            <hr />
+            <div class='photo_container'>
+            </div>
+        </div>
+    </div>
+    </div>
+
     
 </body>
