--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,7 @@
             </div>
         </div>
         <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
             <p class='body_p'>A pretty nifty LAN-enabled multiplayer Cards game, right in the terminal. Requires no dependencies, being implemented purely through the Python socket library.</p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
@@ -96,6 +97,7 @@
             </div>
         </div>
         <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Cookie Monster</h1>
             <p class='body_p'>An incredibly bare-bones implementation of QTBrowser with PyQT, that periodically and quietly clears cookies automatically for uninterrupted New York Times and Washington Post reading (or any site that restricts access through cookies).</p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
@@ -105,6 +107,9 @@
             </ul>
             <hr />
             <div class='photo_container'>
+                <img src='./images/cm1.png' />
+                <img src='./images/cm2.png' />
+                <img src='./images/cm3.png' />
             </div>
         </div>
     </div>
