--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="home.js"></script>
 </head>
 <body>
+    <div style='position:absolute;background-color:white;width:101%;line-height:45px;left:0;color:black;font-family:courier;text-align:center;height:50px;top:0;'>This site is currently under construction!</div>
 	<div id='home_container'>
         <h1 id='name'></h1>
 		<h1 style='color:black;'>BRYCE YODER</h1>
