--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     <li>Java</li>
                 </ul>
             </div>
-            <div class='split_list_part' style='width:1px;align-self:center;height:300px;background-color:black'></div>
+            <div id='split-list-div' class='split_list_part' style='width:1px;align-self:center;height:300px;background-color:black'></div>
             <div class='split_list_part'>
                 <h1 style='font-size:50px;'>Technologies</h1>
                 <ul>
