Further Project info, mobile styles, sub-site

--- a/projects.html
+++ b/projects.html
@@ -19,34 +19,183 @@
     <div name='Animations' style='margin:0 100;width:45%;' class='body_container proj'>
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
-            <h1 class='body_heading' style='width:500px;'>Placeholder</h1>
-            <p class='body_p'>asdfhadsf ads;f 'asdf a;fs; dsaf'ads ;fkds;ja fadsjfaoeiw phsvahuverwf nvphaer pahu ipuvbaep bvz pabspbrew bopucvbpjuafp[e bpadfsvpbas v</p>
+            <h1 class='body_heading' style='width:500px;'>A Trump Presidency</h1>
+            <iframe class='video' src="https://www.youtube.com/embed/5i-gbuoi3YQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <hr />
-            <div class='photo_container'>
-            </div>
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>God Has a Plane</h1>
+            <iframe class='video' src="https://www.youtube.com/embed/udqalI91NXM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>A Comprehensive Guide to Why Everyone in America Should Vote</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/MT2PB1qkbYk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Rules for SSA Triangles</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/vPO1oOMQO4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Give Thanks</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/M_pp1-HHfhU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Spooky</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/7mcpeNe9TTQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Contact!</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/42qEXx2lpaI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+        
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Baseball</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/S2a4CfBLqkA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Sharkbait</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/OGkvsn96qAc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Don't Drink and Drive</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/dpBM5bUrhGU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Shovel the Walk</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/-AOnSllD-aI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Portal "Still Alive" Animation</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/nOkJ9SQTqSs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+        
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>LEGOS IN SPACE THE MOVIE THE FANFIC THE ANIMATED FAN MOVIE</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/KOovUOx1p6U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Vending Machine</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/TJOgcf12gW8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Monk</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/I4ifnFX9nbo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <hr />
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>An Apple A Day</h1>
+            <iframe class='video'src="https://www.youtube.com/embed/wnCCzCAUv4w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
+
+
     <div name='Websites' style='margin:0 100;width:45%;' class='body_container proj'>
+
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
-            <h1 class='body_heading' style='width:500px;'>Placeholder</h1>
-            <p class='body_p'>asdfhadsf ads;f 'asdf a;fs; dsaf'ads ;fkds;ja fadsjfaoeiw phsvahuverwf nvphaer pahu ipuvbaep bvz pabspbrew bopucvbpjuafp[e bpadfsvpbas v</p>
+            <h1 class='body_heading' style='width:500px;'>Los Primos</h1>
+            <p class='body_p'>A website for a local Goshen restaurant I created as part of a class project, and then continued work on to develop my skills. Although it is not actually in use, it is still a good showcase of the work I have done in the past.</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='./los-primos/index.php'>Check it out!</a></p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Unique and expressive design</li>
+                <li>Dynamically-updated Yelp reviews</li>
+                <li>Google Maps integration</li>
+            </ul>
+            <hr />
+            <div class='photo_container'>
+                <img src='./images/lp1.jpg' />
+                <img src='./images/lp2.png' />
+                <img src='./images/lp3.png' />
+                <img src='./images/lp4.png' />
+            </div>
+        </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Gotcha!</h1>
+            <p class='body_p'>A website/webapp for an on-campus game of Gotcha (AKA Assassins). Allows participants to register with the site and submit reports that are handled automatically. This was one of my first web projects, and as such, manifested itself as a sloppy mess of Python and PHP without any frameworks involved. However, it works well and is worth showing.</p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Login and Registration system</li>
+                <li>Submit and automatically handle reports</li>
+                <li>Handles malicious reports</li>
+                <li>Admin panel with ability to stop and reset games, add and revoke admin status, and handle reports manually.</li>
+            </ul>
             <hr />
             <div class='photo_container'>
             </div>
         </div>
+
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Bryce Yoder</h1>
+            <p class='body_p'>That's the website you're on! Neat!</p>
+        </div>
     </div>
+
+
     <div name='Games' style='margin:0 100;width:45%;' class='body_container proj'>
+
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
-            <h1 class='body_heading' style='width:500px;'>Placeholder</h1>
-            <p class='body_p'>asdfhadsf ads;f 'asdf a;fs; dsaf'ads ;fkds;ja fadsjfaoeiw phsvahuverwf nvphaer pahu ipuvbaep bvz pabspbrew bopucvbpjuafp[e bpadfsvpbas v</p>
+            <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
+            <p class='body_p'>A pretty nifty LAN-enabled multiplayer Cards game, right in the terminal. Requires no dependencies, being implemented purely through the Python socket library.</p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Search for games on local network</li>
+                <li>Integrated instant chat for players</li>
+                <li>Supports a theoretically infinite number of players per game</li>
+                <li>Add and edit your own cards easily</li>
+                <li>Lots of bugs</li>
+            </ul>
             <hr />
             <div class='photo_container'>
             </div>
         </div>
     </div>
+
+
     <div name='Other' style='margin:0 100;width:45%;' class='body_container proj selected'>
+
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Homeboard</h1>
@@ -66,6 +215,7 @@
                 <img src='./images/hb3.png' />
             </div>
         </div>
+
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>BENK Media Server</h1>
@@ -87,21 +237,8 @@
                 <img src='./images/bms5.png' />
             </div>
         </div>
-        <div class='project'>
-            <div style='width:100vw;height:500px;position:absolute;'></div>
-            <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
-            <p class='body_p'>A pretty nifty LAN-enabled multiplayer Cards game, right in the terminal. Requires no dependencies, being implemented purely through the Python socket library.</p>
-            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
-                <li>Search for games on local network</li>
-                <li>Integrated instant chat for players</li>
-                <li>Supports a theoretically infinite number of players per game</li>
-                <li>Add and edit your own cards easily</li>
-                <li>Lots of bugs</li>
-            </ul>
-            <hr />
-            <div class='photo_container'>
-            </div>
-        </div>
+
+
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Cookie Monster</h1>
@@ -111,7 +248,6 @@
                 <li>Browse without cookies!</li>
                 <li>Internet Explorer implementation for sites that don't work with QTBrowser</li>
             </ul>
-            <hr />
             <div class='photo_container'>
                 <img src='./images/cm1.png' />
                 <img src='./images/cm2.png' />
