Project page fixes

--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+    <div id='page_select'>
+        <a href='projects.html'>Projects</a>|
+        <a href='contact.html'>Contact</a>
+    </div>
     <h1 class='page_heading'>ABOUT</h1>
     <span class='page_subhead'><a class='exlink' href='https://www.github.com/limekiller'>GitHub</a> | <a class='exlink' href='https://www.youtube.com/channel/UCjfpZEuhd5bzGf-TFdnCwpg'>YouTube</a></span>
     <div class='body_container'>
