--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+    <div id='page_select'>
+        <a href='about.html'>About</a>|
+        <a href='projects.html'>Projects</a>
+    </div>
     <h1 class='page_heading'>Contact</h1>
     <div class='body_container'>
         <h1 class='body_heading' style='width:500px;'>Drop Me a Line</h1>
