--- a/projects.html
+++ b/projects.html
@@ -146,13 +146,14 @@
                 <li>Dynamically-updated Yelp reviews</li>
                 <li>Google Maps integration</li>
             </ul>
-            <hr />
-            <div class='photo_container'>
+            <div class='photo_container' onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
                 <img src='./images/lp1.jpg' />
                 <img src='./images/lp2.png' />
                 <img src='./images/lp3.png' />
                 <img src='./images/lp4.png' />
             </div>
+            <hr />
         </div>
 
         <div class='project'>
@@ -165,9 +166,10 @@
                 <li>Handles malicious reports</li>
                 <li>Admin panel with ability to stop and reset games, add and revoke admin status, and handle reports manually.</li>
             </ul>
-            <hr />
-            <div class='photo_container'>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
             </div>
+            <hr />
         </div>
 
         <div class='project'>
@@ -191,12 +193,13 @@
                 <li>Add and edit your own cards easily</li>
                 <li>Lots of bugs</li>
             </ul>
-            <hr />
-            <div class='photo_container'>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
                 <img src='./images/cah1.png' />
                 <img src='./images/cah2.png' />
-                <img src='./images/cah3.png' />
+                <img src='./images/cah4.png' />
             </div>
+            <hr />
         </div>
     </div>
 
@@ -215,12 +218,13 @@
                 <li>An array of widgets available</li>
                 <li>Easily develop widgets against a simple template</li>
             </ul>
-            <hr />
-            <div class='photo_container'>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
                 <img src='./images/hb1.png' />
                 <img src='./images/hb2.png' />
                 <img src='./images/hb3.png' />
             </div>
+            <hr />
         </div>
 
         <div class='project'>
@@ -235,14 +239,15 @@
                 <li>Stream videos from external sources</li>
                 <li>View movie info with the help of the IMDB API</li>
             </ul>
-            <hr />
-            <div class='photo_container'>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
                 <img src='./images/bms1.png' />
                 <img src='./images/bms2.png' />
                 <img src='./images/bms3.png' />
                 <img src='./images/bms4.png' />
                 <img src='./images/bms5.png' />
             </div>
+            <hr />
         </div>
 
 
@@ -255,7 +260,8 @@
                 <li>Browse without cookies!</li>
                 <li>Internet Explorer implementation for sites that don't work with QTBrowser</li>
             </ul>
-            <div class='photo_container'>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
                 <img src='./images/cm1.png' />
                 <img src='./images/cm2.png' />
                 <img src='./images/cm3.png' />
@@ -280,6 +286,26 @@
         for (var i=0; i < y.length; i++){
             y[i].style.display = 'initial';
             y[i].classList.add("selected");
+        }
+    }
+
+    function spoiler(e) {
+        if (window.innerWidth >= 960) {
+            return;
+        }
+
+        if (e.children[0].style.transform == 'rotate(45deg)'){
+            e.children[0].style.transform = 'rotate(0deg)';
+        } else {
+            e.children[0].style.transform = 'rotate(45deg)';
+        }
+
+        for (var i=1;i < e.children.length; i++) {
+            if (e.children[i].classList.contains('show')){
+                e.children[i].classList.remove('show');
+            } else {
+                e.children[i].classList.add('show');
+            }
         }
     }
 </script>
