--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Bryce Yoder</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="shortcut icon" type="image/x-icon" href="https://bryceyoder.com/favicon.ico"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
     <script type="text/javascript" src="home.js"></script>
 </head>
