--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Bryce Yoder | About</title>
+	<title>Bryce Yoder | Projects</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -19,7 +19,7 @@
         | <span name="Games" class='proj_select' onclick="selectList(this.innerHTML)" >Games</span>
         | <span name="Other" class='proj_select selected' onclick="selectList(this.innerHTML)" >Other</span>
     </div>
-
+<!--
     <div name='Animations' style='margin:0 100;width:45%; display:none;' class='body_container proj'>
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
@@ -132,6 +132,7 @@
             <iframe class='video'src="https://www.youtube.com/embed/wnCCzCAUv4w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
+    --!>
 
 
     <div name='Websites' style='margin:0 100;width:45%;display:none;' class='body_container proj'>
