Added landing page for Squirrelly game, more projects, better UI

--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,28 @@
 
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>Squirrelly: A GC Odyssey</h1>
+            <p class='body_p'>Developed as part of Goshen College's Maple Scholars program, <i>Squirrelly</i> is a fun, fast-paced third-person collectathon where players collect as many nuts as possible without being run over!</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='/squirrelly/index.html'>Check it out!</a></p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Explore campus in 3D</li>
+                <li>AI reacts to your decisions and hunts you down</li>
+                <li>Music streamed live from Goshen College's radio station, 91.1 The Globe</li>
+                <li>Still in development, more features to come</li>
+            </ul>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
+                <img src='./images/sq1.png' />
+                <img src='./images/sq2.png' />
+                <img src='./images/sq3.png' />
+                <img src='./images/sq4.png' />
+                <img src='./images/sq5.png' />
+                <img src='./images/sq6.png' />
+            </div>
+            <hr />
+        </div>
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
             <p class='body_p'>A pretty nifty LAN-enabled multiplayer Cards game, right in the terminal. Requires no dependencies, being implemented purely through the Python socket library.</p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
