--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Bryce Yoder</title>
 	<meta charset="UTF-8">
+    <meta name="description" content="Bryce Yoder, programmer and graphic designer in Goshen, IN">
+    <meta name="keywords" content="Programming,Graphic Design,Goshen,Indiana,Bryce Yoder">
+    <meta name="author" content="Bryce Yoder">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="shortcut icon" type="image/x-icon" href="https://bryceyoder.com/favicon.ico"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -10,10 +13,10 @@
 </head>
 <body>
     <div style='position:absolute;background-color:white;width:101%;line-height:45px;left:0;color:black;font-family:courier;text-align:center;height:50px;top:0;'>This site is currently under construction!</div>
-	<div id='home_container'>
+	<header id='home_container'>
         <h1 id='name'></h1>
 		<h1 style='color:black;'>BRYCE YODER</h1>
-        <h5 id='subhead'>Graphic Design and Programming<hr /></h1>
+        <h5 id='subhead'>Programming and Graphic Design<hr /></h1>
         <br />
 		<div id='home_menu'>
             <span class='home-menu-item'><a href='about.html'>About</a></span>	
@@ -24,5 +27,5 @@
             <hr class='home-div-2' />
             <span class='home-menu-item'><a href='contact.html'>Contact</a></span>	
 		</div>
-	</div>
+	</header>
 </body>
